--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
 	"C_Cpp.errorSquiggles": "disabled",
-	"cmake.sourceDirectory": "/home/koma/workdir/programming/c/42/so_long/lib/MLX42"
+	"cmake.sourceDirectory": "/home/koma/workdir/programming/c/42/so_long/lib/MLX42",
+	"files.associations": {
+		"mlx42.h": "c"
+	}
 }
