--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"C_Cpp.errorSquiggles": "disabled",
 	"cmake.sourceDirectory": "/home/koma/workdir/programming/c/42/so_long/lib/MLX42",
 	"files.associations": {
-		"mlx42.h": "c"
+		"mlx42.h": "c",
+		"so_long.h": "c"
 	}
 }
